# chromadb-perf

./: locust_t.py  mock_server.py  pyproject.toml
charts/: draw_charts.py
