[tool.poetry]
name = "chromadb-perf"
version = "0.1.0"
description = ""
authors = ["Trayan Azarov <trayan.azarov@amikos.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
orjson = "^3.9.13"
chromadb = "^0.4.22"
locust = "^2.22.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
